13-k8s-03-config/src/cm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-deploy
  labels:
    app: cm-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm-deploy
  template:
    metadata:
      labels:
        app: cm-deploy
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        imagePullPolicy: IfNotPresent
      - image: wbitt/network-multitool
        name: multitool
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: cm
            mountPath: /usr/share/nginx/html     
      volumes:
      - name: cm
        configMap:
          name: cm
