13-k8s-03-config/src/cm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cm-svc
  namespace: default
spec:
  selector:
    app: cm-deploy
  ports:
  - name: cm
    port: 8080
    protocol: TCP
    nodePort: 30080
  type: NodePort
