13-k8s-03-config/src/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dimi-netology.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: https-svc
            port:
              name: nginx
  tls:
    - hosts:
      - dimi-netology.ru
      secretName: https-secret
